<resources>
    <string name="app_name">Pig Dice</string>
    <string name="new_game">New Game</string>
    <string name="options">Options</string>
    <string name="name">Player 1: </string>
    <string name="p2Name">Player 2: </string>
    <string name="difficulty">AI Difficulty: </string>
    <string name="end_score">Ending Score: </string>
    <string name="diff_easy">Easy</string>
    <string name="diff_int">Intermediate</string>
    <string name="diff_hard">Hard</string>
    <string name="remove_ads">Remove Ads (.99)</string>
    <string name="opt_save">Save</string>
    <string name="opt_clear">Clear</string>
    <string name="roll">Roll Dice</string>
    <string name="stay">Stay</string>
    <string name="skip">Skip</string>
    <string name="quit">Quit</string>
    <string name="running_score">Running Score: </string>
    <string name="dice_styles">Dice Styles</string>

    <!--About Screen -->
    <string name="version">Version: 3.0.0</string>
    <string name="description_one">Pig Dice is a game played between two players</string>
    <string name="object">The object is to reach the end score before your opponent can.</string>
    <string name="rules_one">Start by rolling the dice</string>
    <string name="rules_two">If you roll a 2 thru 6, add the value \nto your running total</string>
    <string name="rules_three">You can choose to stay, and add your\nrunning total to your score</string>
    <string name="rules_four">Or you can roll again,\nand build up your running total</string>
    <string name="rules_five">If you roll a 1, you forfeit \nyour running total and your turn ends</string>
    <string name="rules_six">Reach your pre-determined end score\nbefore your opponent, and win!</string>

    <string name="credits">Credits</string>
    <string name="credits_one">Game programmed by Thomas LaSalle from CFM Games</string>
    <string name="credits_two">Pig icon made by Freepik from www.flaticon.com</string>
    <string name="back">Go Back</string>

    <!--Dice Names -->
    <string name="dice_001">Basic Red</string>
    <string name="dice_002">Red Numeric</string>
    <string name="dice_003">Red Pips</string>
    <string name="dice_004">Basic</string>

    <!--Purchasable Dice -->
    <string name="dice_005_Unowned">Rainbow Pips (200 PP)</string>
    <string name="dice_005">Rainbow Pips</string>
    <string name="dice_006_Unowned">Inverse (200 PP)</string>
    <string name="dice_006">Inverse</string>
</resources>
