<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DiceSelection">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/diceImageRow01"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/dice001Image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/die_1" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/dice002Image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/die_1_002" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/dice003Image"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/die_1_003" />
            </TableRow>

            <TableRow
                android:id="@+id/diceLabelRow01"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/dice001Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectDice"
                    android:text="@string/dice_001" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/dice002Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectDice"
                    android:text="@string/dice_002" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/dice003Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectDice"
                    android:text="@string/dice_003" />
            </TableRow>

            <TableRow
                android:id="@+id/diceImageRow02"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:id="@+id/diceLabelRow02"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>